Minor responsive fix to resolve overflowing container in max-width:480px

--- a/application/less/style.less
+++ b/application/less/style.less
@@ -695,6 +695,9 @@ ul.registry {
 /* For smartphones */
 @media (max-width: 480px) {
     .media-max-width-480px();
+    section .registry {
+        padding: 10px 20px;
+    }
 }
 
 /* For smaller displays like laptops */
